--- a/style.css
+++ b/style.css
@@ -68,15 +68,19 @@ li:hover{
     border-radius: 25px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
 }
-.imgageportion{
-    height: 60vh;
+ .imgageportion{
+    /*height: 60vh;
     width: 60vh;
     background-image: url("imageshowcase.jpg");
     background-size: cover;
     overflow: hidden;
     border-radius: 25px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-}
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1); */width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
+  border-radius: 20px; 
+ }
 .about{
   color: #222;
   max-width: 500px;
@@ -178,4 +182,5 @@ footer{
   ul {
     gap: 1rem;
   }
+
 }
